# droid-dash

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  demo.tape  mkdocs.yml  noxfile.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml  security.yml
docs/: api.md  cli.md  configuration.md  index.md  installation.md  quickstart.md  usage.md
scripts/: generate_fake_sessions.py  take_screenshots.py
src/droid_dash/: __init__.py  cli.py
test_sessions/-Users-demo-projects-opensource-cli-tool/: 05e85a5a-802c-464a-9e0c-c10dc7ef4bae.jsonl  05e85a5a-802c-464a-9e0c-c10dc7ef4bae.settings.json  0a5aebec-8bb6-419c-927c-6228d474936f.jsonl  0a5aebec-8bb6-419c-927c-6228d474936f.settings.json  11db54de-515e-4ba2-83a3-1fd952d6e695.jsonl  11db54de-515e-4ba2-83a3-1fd952d6e695.settings.json  41f346af-5250-455a-82ae-efe5804a8a96.jsonl  41f346af-5250-455a-82ae-efe5804a8a96.settings.json  4b93f97d-9482-4260-a757-cc69c9a8291a.jsonl  4b93f97d-9482-4260-a757-cc69c9a8291a.settings.json  58e23947-86a3-4542-90fd-47aa2d0fa5d0.jsonl  58e23947-86a3-4542-90fd-47aa2d0fa5d0.settings.json  8ef53b0f-c680-4d7e-bd43-f2e58b67e5ad.jsonl  93331254-de34-48bf-8753-5b79c65390bb.jsonl  93331254-de34-48bf-8753-5b79c65390bb.settings.json  a66a06e3-04e9-4516-9d70-08aee0657d3e.jsonl  a66a06e3-04e9-4516-9d70-08aee0657d3e.settings.json  c88be805-d39d-4d94-9b50-e739452c5a4a.jsonl  c88be805-d39d-4d94-9b50-e739452c5a4a.settings.json  df6ac57c-711c-424a-ad62-dd490b886817.jsonl  df6ac57c-711c-424a-ad62-dd490b886817.settings.json
test_sessions/-Users-demo-projects-opensource-contrib-react/: 4ec5f8a1-a080-4172-8bc0-ddc87d965288.jsonl  4ec5f8a1-a080-4172-8bc0-ddc87d965288.settings.json  6cddc4d3-b5f6-43a4-9ba9-0a90d7e74ebe.jsonl  6cddc4d3-b5f6-43a4-9ba9-0a90d7e74ebe.settings.json  7b4b15f5-7e1e-4106-9771-46940165dbce.jsonl  7b4b15f5-7e1e-4106-9771-46940165dbce.settings.json  97e05c53-cb56-4c46-a8fb-038817b0e130.jsonl  97e05c53-cb56-4c46-a8fb-038817b0e130.settings.json  a349dd72-2483-4203-8f97-5d3511884924.jsonl  a349dd72-2483-4203-8f97-5d3511884924.settings.json  a75de411-7e05-48a7-ad6a-3b1f14add6fd.jsonl  a75de411-7e05-48a7-ad6a-3b1f14add6fd.settings.json  b50913c2-2e43-4562-9441-0be40e457e7c.jsonl  b50913c2-2e43-4562-9441-0be40e457e7c.settings.json  c4d80200-ae64-46ec-8ce9-a0e927403589.jsonl  e1169f57-a5ca-46ff-936c-df8023a5b2de.jsonl  e1169f57-a5ca-46ff-936c-df8023a5b2de.settings.json  e938ccb9-14e5-4a9d-b023-1f7c6bd3c0fd.jsonl  e938ccb9-14e5-4a9d-b023-1f7c6bd3c0fd.settings.json  fa20ff7c-9272-4917-9bf5-9ce8e03d172b.jsonl  fa20ff7c-9272-4917-9bf5-9ce8e03d172b.settings.json
test_sessions/-Users-demo-projects-opensource-python-lib/: 0414cb90-1594-4099-9ab7-c24850d2815e.jsonl  0414cb90-1594-4099-9ab7-c24850d2815e.settings.json  27a59855-b34c-48ed-96a6-147d05ab035d.jsonl  27a59855-b34c-48ed-96a6-147d05ab035d.settings.json  3a892c7d-a5a1-485b-997b-5082d5af91f9.jsonl  3a892c7d-a5a1-485b-997b-5082d5af91f9.settings.json  430b19c6-7bc3-47b7-a863-c830d7f41c85.jsonl  430b19c6-7bc3-47b7-a863-c830d7f41c85.settings.json  5b0c91d7-c763-4ff8-bf73-28b3d4077647.jsonl  6e893c61-baa3-4fbd-bb90-9598faca7647.jsonl  6e893c61-baa3-4fbd-bb90-9598faca7647.settings.json  9848aece-b339-490c-a742-21676b90d24f.jsonl  9848aece-b339-490c-a742-21676b90d24f.settings.json  daaca438-0172-4ba7-b741-dfc84d2c5475.jsonl  daaca438-0172-4ba7-b741-dfc84d2c5475.settings.json  ffd4f458-97a7-4147-b87e-d0fc835b3156.jsonl  ffd4f458-97a7-4147-b87e-d0fc835b3156.settings.json
test_sessions/-Users-demo-projects-personal-blog/: 1b212fd6-5174-4569-8e6b-d5ad54e2ab08.jsonl  1b212fd6-5174-4569-8e6b-d5ad54e2ab08.settings.json  2b888537-2a89-4554-b9d8-f4292e3cc54f.jsonl  2b888537-2a89-4554-b9d8-f4292e3cc54f.settings.json  44916150-0c73-4439-b738-749b9ecd63b5.jsonl  8897c2b1-8cea-4670-8101-213b1d3dbcbe.jsonl  8897c2b1-8cea-4670-8101-213b1d3dbcbe.settings.json  890b6fde-e2aa-4675-82c2-901f396e63d4.jsonl  890b6fde-e2aa-4675-82c2-901f396e63d4.settings.json  d18e5f86-e82c-40b2-a3e1-6bda6b21ff48.jsonl  d18e5f86-e82c-40b2-a3e1-6bda6b21ff48.settings.json  dab48417-d9d5-40d5-883a-1ea14eef20ef.jsonl  dab48417-d9d5-40d5-883a-1ea14eef20ef.settings.json  ef66680d-f183-44bb-ae8e-b7326a4e1a2d.jsonl  ef66680d-f183-44bb-ae8e-b7326a4e1a2d.settings.json
test_sessions/-Users-demo-projects-personal-dotfiles/: 254e4a9d-1ac2-4f30-b7c2-308f513cb7ca.jsonl  254e4a9d-1ac2-4f30-b7c2-308f513cb7ca.settings.json  344da6f6-1fbe-49b0-95f6-df46d443ea40.jsonl  344da6f6-1fbe-49b0-95f6-df46d443ea40.settings.json  6dd61fb2-4479-48fc-954f-13c7a897c3d4.jsonl  7de587dd-baaf-42b0-b179-a4c8ff720497.jsonl  7de587dd-baaf-42b0-b179-a4c8ff720497.settings.json  8890fed8-c932-40cf-a828-f414a2b80e35.jsonl  b4c84609-651a-4103-93ea-8cff35280211.jsonl  b4c84609-651a-4103-93ea-8cff35280211.settings.json  b5dc2643-5c13-44c7-9d36-fb85881fcc05.jsonl  b5dc2643-5c13-44c7-9d36-fb85881fcc05.settings.json  fe446a13-2201-4b0a-bff8-09dcdcfe548b.jsonl  (+1 more)
tests/: __init__.py  test_config.py  test_cost.py  test_parser.py
(+133 files in other folders)
