[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "droid-dash"
version = "0.1.1"
description = "TUI dashboard for Factory.ai Droid session analytics - track tokens, costs, and explore sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Krystian Safjan", email = "ksafjan@gmail.com"}
]
keywords = [
    "factory-ai",
    "droid",
    "tui",
    "dashboard",
    "analytics",
    "claude",
    "ai-coding",
    "textual",
    "terminal",
    "session-management"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
droid-dash = "droid_dash.cli:main"

[project.urls]
Homepage = "https://github.com/izikeros/droid-dash"
Documentation = "https://izikeros.github.io/droid-dash"
Repository = "https://github.com/izikeros/droid-dash"
Issues = "https://github.com/izikeros/droid-dash/issues"
Changelog = "https://github.com/izikeros/droid-dash/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/droid_dash"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-bdd>=7.0.0",
    "pytest-textual-snapshot>=1.0.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
    "ty>=0.0.1a23",
    "nox>=2024.0.0",
    "pre-commit>=3.0.0",
    "bump-my-version>=0.28.0",
    "git-cliff>=2.0.0",
    "bandit[toml]>=1.7.5",
    "safety>=3.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.bumpversion]
current_version = "0.1.1"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/droid_dash/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
